# CG-2022

./: README.md
src/: CMakeLists.txt
src/0_Flecha/: CMakeLists.txt  main.cpp
src/1_Estrella_linea/: CMakeLists.txt  main.cpp
src/1_Estrella_punto/: CMakeLists.txt  main.cpp
src/1_Estrella_triangulo/: CMakeLists.txt  main.cpp
src/1_Pizza_linea/: CMakeLists.txt  main.cpp
src/1_Pizza_punto/: CMakeLists.txt  main.cpp
src/1_Pizza_triangulo/: CMakeLists.txt  main.cpp
src/1_Triangulo_linea/: CMakeLists.txt  main.cpp
src/1_Triangulo_punto/: CMakeLists.txt  main.cpp
src/1_Triangulo_triangulo/: CMakeLists.txt  main.cpp
src/2_RGB/: CMakeLists.txt  main.cpp
src/3_UDRL_move/: CMakeLists.txt  main.cpp
src/4_Vitral/: CMakeLists.txt  main.cpp
src/5_Matriz/: CMakeLists.txt  main.cpp
src/6_Vitral_animacion/: CMakeLists.txt  main.cpp
src/Parcial1/: CMakeLists.txt  main.cpp
src/Parcial2/: CMakeLists.txt  main.cpp
