add_subdirectory( 0_Flecha )

add_subdirectory( 1_Triangulo_linea )
add_subdirectory( 1_Triangulo_punto )
add_subdirectory( 1_Triangulo_triangulo )
add_subdirectory( 1_Estrella_linea )
add_subdirectory( 1_Estrella_punto )
add_subdirectory( 1_Estrella_triangulo )
add_subdirectory( 1_Pizza_linea )
add_subdirectory( 1_Pizza_punto )
add_subdirectory( 1_Pizza_triangulo )

add_subdirectory( 2_RGB )

add_subdirectory( 3_UDRL_move )

add_subdirectory( 4_Vitral )

add_subdirectory( 5_Matriz )

add_subdirectory( 6_Vitral_animacion )

add_subdirectory( hw0 )


